[tool.poetry]
name = "quanteda"
version = "0.1.0"
description = "Perform exploratory data analysis (EDA) on quantitative data."
authors = ["Doris (Yun Yi) Cai, Jake Barnabe, John Shiu, Merete Lutz"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
